--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@dwelle/toad-cache",
   "description": "LRU and FIFO caches for Client or Server",
-  "version": "3.3.1",
+  "version": "3.3.2",
   "homepage": "https://github.com/kibertoad/toad-cache",
   "author": "Igor Savin <kibertoad@gmail.com>",
   "repository": {
@@ -17,7 +17,7 @@
   ],
   "license": "MIT",
   "source": "index.js",
-  "main": "dist/toad-cache",
+  "main": "dist/@dwelle/toad-cache",
   "exports": {
     "types": "./toad-cache.d.ts",
     "import": "./dist/toad-cache.js",
